--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "is-cyclic",
   "version": "0.1.2",
-  "description": "High-performance, zero-dependency library to detect cyclic JavaScript object.",
+  "description": "A simple library to detect cyclic object references in JavaScript.",
   "source": "src/index.js",
   "main": "dist/is-cyclic.js",
   "module": "dist/is-cyclic.m.js",
   "esmodule": "dist/is-cyclic.modern.js",
   "scripts": {
-    "test": "ava",
+    "lint": "xo",
+    "fix": "xo --fix",
+    "test": "xo --fix && ava",
     "build": "microbundle",
     "dev": "microbundle watch"
   },
@@ -21,8 +23,10 @@
     "url": "git+https://github.com/levibit/is-cyclic.git"
   },
   "keywords": [
-    "JavaScript",
-    "Cyclic"
+    "object",
+    "cyclic",
+    "circular",
+    "reference"
   ],
   "author": "Levi Wong",
   "license": "SEE LICENSE IN LICENSE",
@@ -35,14 +39,12 @@
     "dist"
   ],
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
     "ava": "^3.12.1",
-    "babel-jest": "^26.3.0",
-    "eslint": "^7.9.0",
     "esm": "^3.2.25",
     "microbundle": "^0.12.3",
     "prettier": "^2.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "xo": "^0.33.1"
+  }
 }
