--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "module": "dist/is-cyclic.m.js",
   "esmodule": "dist/is-cyclic.modern.js",
   "scripts": {
-    "lint": "standard",
-    "fix": "standard --fix",
-    "test": "standard --fix && ava",
-    "build": "standard --fix && microbundle",
-    "dev": "microbundle watch"
+    "test": "eslint && ava",
+    "build": "microbundle",
+    "dev": "microbundle watch",
+    "precommit": "lint-staged"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
   },
   "ava": {
     "require": [
@@ -41,8 +45,10 @@
   "devDependencies": {
     "ava": "^3.12.1",
     "babel-plugin-tailcall-optimization": "^2.0.0",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
     "esm": "^3.2.25",
-    "microbundle": "^0.12.3",
-    "standard": "^14.3.4"
+    "husky": "^4.3.0",
+    "microbundle": "^0.12.3"
   }
 }
